<resources>
  <string name="app_name">Support Terminal</string>
  <string name="code">Code :</string>
  <string name="startQr">Hover over the code</string>
  <string name="name">Scan</string>
  <string name="transporter">Transporter</string>
  <string name="adress">Company</string>
  <string name="date_delivery">Delivery date</string>
  <string name="complects">Kit</string>
  <string name="scan">Scan</string>
  <string name="naklad">Consignment</string>
  <string name="share_hint">Share using</string>
  <string name="delete_dialog">Delete this photo?</string>
  <string name="delete_title">Confirm</string>
  <string name="list_complect">List of kits</string>
  <string name="ok_button_sheet">Accept</string>
  <string name="empty_complect">The list is empty!\n Will scan or select items to send</string>
  <string name="add_complect_button">Added Kits</string>
  <string name="transportation">Transportation</string>
  <string name="comment">Comment</string>
  <string name="action">Action</string>
  <string name="type_of_cargo">Type of Cargo</string>
  <string name="add_from_history">Add from History</string>
  <string name="send">Send</string>
  <string name="count">Count</string>
  <string name="expand_the_list">Expand the List</string>
  <string name="take_photo">Take a photo</string>
  <string name="replace_photo">Replace photo</string>
  <string name="carrier_field_empty">Fill in the Carrier field!</string>
  <string name="company_field_empty">Fill in the Company field!</string>
  <string name="date_field_empty">Fill in the Date field!</string>
  <string name="invoice_picture_empty">Take a picture of the invoice!</string>
  <string name="barcode_empty">Scan or Select Barcodes!</string>
  <string name="workType_field_empty">Choose The Type Of Work</string>
  <string name="count_empty">Enter the quantity</string>
  <string name="scan_barcode">Scan the barcode</string>
  <string name="scan_qr">Scan the qr</string>
  <string name="ok">OK</string>
  <string name="email_field_empty">Please enter your registered e-mail</string>
  <string name="password_field_empty">Please enter your password</string>
  <string name="email_wrong">Please enter a valid email</string>
  <string name="password_wrong">Password should be of at least 8 character"</string>
  <string name="wrong_login">Denial of access!\nInvalid Username or Password</string>
  <string name="tracking_ok">The data is fixed.\nThanks!</string>
</resources>